--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_exclude">ExcludeActivity</string>
+    <string name="title_activity_splash">SplashActivity</string>
 </resources>
