--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_exclude">ExcludeActivity</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_splash_screen">SplashScreenActivity</string>
 </resources>
