--- a/zxing/src/main/res/values/strings.xml
+++ b/zxing/src/main/res/values/strings.xml
@@ -139,4 +139,9 @@
   <string name="result_wifi">Found WLAN Configuration</string>
   <string name="sbc_name">Google Book Search</string>
   <string name="wifi_changing_network">Requesting connection to network\u2026</string>
+    <string name="title_activity_generate_qrcode">GenerateQRCodeActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
